--- a/styles/rating-state.css
+++ b/styles/rating-state.css
@@ -1,14 +1,16 @@
 .form {
   background-color: var(--darkblue);
   border-radius: 20px;
-  height: 100%;
   padding: 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 28px;
 }
 
 .star {
+  align-self: flex-start;
   background-color: var(--littledarkblue);
   border-radius: 30px;
-  margin-bottom: 10px;
   padding: 12px;
 }
 
@@ -16,33 +18,26 @@
   background-color: var(--lightgrey);
 }
 
-.form-container {
-  display: flex;
-  flex-direction: column;
-  gap: 28px;
-}
-
-.form-container .title {
+.form .title {
   color: var(--white);
   font-size: 25px;
-  margin-bottom: 10px;
 }
 
-.form-container .subtitle {
+.form .subtitle {
   color: var(--lightgrey);
   font-size: 15px;
 }
 
-.form-container #options {
+.form #options {
   display: flex;
   justify-content: space-around;
 }
 
-.form-container .input {
+.form .input {
   display: none;
 }
 
-.form-container .number {
+.form .number {
   align-items: center;
   background-color: var(--littledarkblue);
   border-radius: 30px;
@@ -55,17 +50,17 @@
   width: 30px;
 }
 
-.form-container .number:hover {
+.form .number:hover {
   background-color: var(--lightgrey);
   color: var(--white);
 }
 
-.form-container .input:checked + .number {
+.form .input:checked + .number {
   background-color: var(--orange);
   color: var(--white);
 }
 
-.form-container .button {
+.form .button {
   background-color: var(--orange);
   border-radius: 30px;
   color: var(--white);
@@ -76,7 +71,7 @@
   text-transform: uppercase;
 }
 
-.form-container .button:hover {
+.form .button:hover {
   background-color: var(--white);
   color: var(--orange);
 }
